# whisper_tools

./: .gitignore  Makefile  README.md  pyproject.toml
src/subtitle_transformer/: __init__.py  __main__.py  transform.py
tests/: test_transformer.py
