[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle_transformer"
version = "0.1.0"
description = "Group subtitle lines by minute and produce minute-indexed paragraphs"
authors = [{ name = "Olivier G." }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "mypy",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
